--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "~4.11.x",
     "kerberos": "~0.0.x",
+    "mailgun-js": "^0.7.13",
     "nexmo": "^1.0.0",
     "parse": "~1.8.0",
     "parse-server": "~2.2.12"
