--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "mailgun-js": "^0.7.13",
     "nexmo": "^1.0.0",
     "parse": "~1.8.0",
-    "parse-server": "~2.2.12",
+    "parse-server": "2.2.12",
     "pubnub": "^4.2.5"
   },
   "scripts": {
